--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="table_list/table_list.css">
     <link rel="stylesheet" href="table/table.css">
     <link rel="stylesheet" href="components/modal/modal.css">
@@ -52,11 +52,13 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-mocks/angular-mocks.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="app.js"></script>
+        <script src="fakeAPI.js"></script>
         <script src="header/header.component.js"></script>
         <script src="table_list/table_list.controller.js"></script>
         <script src="table_list/table_list.routes.js"></script>
